# codigo-rinha-de-backend-2024-q1-rust

./: Cargo.toml  Dockerfile  Makefile
.sqlx/: query-3c018d28d8ca25d7e89c6d0c8019eb4cb31f84766e24bb6d80cf0db3e7e051d5.json
scripts/sql/: tables.sql
sql/: v0001_create_tables.sql
src/: handlers.rs  main.rs  types.rs
test/load-test/: .env  docker-compose.yml  executar-teste-local.ps1  executar-teste-local.sh
