[package]
name = "rinha-de-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3.34", features = ["macros", "serde", "formatting", "parsing"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "time"] }
